Add POM files for proto-module and target-management-service with necessary dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,9 @@
     <description>Parent POM for Pulse Synapse Microservices</description>
 
     <modules>
+        <module>proto-module</module>
         <module>user-auth-service</module>
+        <module>target-management-service</module>
     </modules>
 
     <properties>
@@ -51,6 +53,11 @@
                 <groupId>io.jsonwebtoken</groupId>
                 <artifactId>jjwt-jackson</artifactId>
                 <version>0.12.6</version>
+            </dependency>
+            <dependency>
+                <groupId>me.paulschwarz</groupId>
+                <artifactId>spring-dotenv</artifactId>
+                <version>4.0.0</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
