--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>user-auth-service</module>
         <module>target-management-service</module>
         <module>scheduler-service</module>
+        <module>polling-worker-service</module>
     </modules>
 
     <properties>
