Add data-ingestion-service module to the project

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>target-management-service</module>
         <module>scheduler-service</module>
         <module>polling-worker-service</module>
+        <module>data-ingestion-service</module>
     </modules>
 
     <properties>
