Add analytics-reporting-service module and its POM configuration

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>scheduler-service</module>
         <module>polling-worker-service</module>
         <module>data-ingestion-service</module>
+        <module>analytics-reporting-service</module>
     </modules>
 
     <properties>
